v2 - changed getTasks endpoint to be paginated, and added more filters: (dueDateFrom and dueDateTo) - added a PUT path for updating tasks - added and update tests